# python-lispy

./: .pre-commit-config.yaml  README.md  lis.py  main.py  pyproject.toml
